examples/test/testpolicy16612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16612
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key30: value34
      key11: value2
      key27: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value43
          key35: value15
      podSelector:
        matchLabels:
          key16: value0
          key48: value20
